0.6.0
    o subjectProfileTextPlot: table format
0.5.0
    o createSubjectProfileReport: reportPerSubject and extend outputFile for different directory
0.4.0
    o createSubjectProfileReport/subjectProfileIntervalPlot: timeAlign
    o defineIndex: fix index specification
    o report: support unicode font (use cairo_pdf instead of pdf)
0.3.0
    o subjectProfileIntervalPlot: new parameters: timeStartShapeVar/timeEndShapeVar
    o fix issue tibble: convert input data as data.frame
0.2.0
    o save nLines at module plot creation instead of extracting them  when combining plots
    o when combining plots across modules, close graphic device only at the end
    o formatParamVar: fix warning when multiple 'paramGroupVar'
    o getGLPGShapePalettePatientProfile
    o getPageVar: fix for plot with multiple lines
    o fix to remove warning: 'Coordinate system already present.'
    o subjectProfileLinePlot: fix to remove warning: 'geom_path: Each group consists of only one observation'
    o additional messages for verbose
    o enable parallelized computations with 'nCores'
    o createSubjectProfileReport: subjectSubset fix
    o 'paging' parameter: enable export into one page
    o subsetData parameter available in each plot function
0.1.0
    o example datasets moved to the glpgUtilityFct package
    o getGLPGColorPalettePatientProfile/getGLPGLinetypePalettePatientProfile
0.0.16
    o subjectProfileTextPlot: concatenate multiple value variable with ', '
    o subjectProfileIntervalPlot: timeLabel
    o subjectProfile[Interval|Event|Line]Plot: use GLPG color palette if no color variable is specified
0.0.15
    o changes for glpgUtilityFct version 0.0.3
    o subjectProfile[Event|Interval]Plot: paramVarSep, by default ' - ' instead of ' '
    o getNLinesYGgplot: add space for subject profile event and interval
    o formatParamVar: fix when empty string in paramVar
0.0.14
    o createSubjectProfileReport: add subjectSubset[Data|Var|Value] parameters