@@ -7,6 +7,7 @@ export(getGLPGLinetypePalettePatientProfile)
 export(getGLPGShapePalettePatientProfile)
 export(getNLinesYGgplot)
 export(getPathTemplate)
+export(getTimeTrans)
 export(subjectProfileCombine)
 export(subjectProfileEventPlot)
 export(subjectProfileIntervalPlot)
@@ -44,6 +45,7 @@ importFrom(plyr,daply)
 importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(reshape2,melt)
+importFrom(scales,trans_new)
 importFrom(stats,reorder)
 importFrom(stats,setNames)
 importFrom(stringr,str_count)
